update modulator and templates

--- a/src/photon_platform/modulator/templates/__init__.py.j2
+++ b/src/photon_platform/modulator/templates/__init__.py.j2
@@ -1,14 +1,16 @@
 """
-logger
+{{ module_name }}
 ======
+
 PHOTON platform
 ---------------
 
-tools for creating log entries for Sphinx-based content sites.
+{{ description }}
 
 """
-__author__ = "phiarchitect"
+__author__ = "{{ author }}"
 __maintainer__ = "PHOTON platform"
 __email__ = "github@phiarchitect.com"
 __version__ = "0.0.1"
 __licence__ = "MIT"
+
